apps/harbor/templates/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: harbor-buffer
  namespace: harbor
spec:
  buffering:
    maxRequestBodyBytes: 1000000000
    memRequestBodyBytes: 1000000000
    retryExpression: ""
