apps/harbor/templates/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: harbor
  namespace: harbor
spec:
  entryPoints:
    - intweb
    - intwebsec
  routes:
    - match: Host(`harbor.injunweb.com`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: harbor-portal
          namespace: harbor
          port: 80
      middlewares:
        - name: harbor-timeout
          namespace: harbor
    - match: Host(`harbor.injunweb.com`) && (PathPrefix(`/api/`) || PathPrefix(`/service/`) || PathPrefix(`/v2/`) || PathPrefix(`/chartrepo/`) || PathPrefix(`/c/`))
      kind: Rule
      services:
        - name: harbor-core
          namespace: harbor
          port: 80
      middlewares:
        - name: harbor-timeout
          namespace: harbor
